# portfolio-arcade

./: .gitignore  ARCHITECTURE_DECISIONS.md  Cargo.toml  PRODUCTION_READINESS_SUMMARY.md  README.md  USAGE_GUIDE.md  demo.sh  test_template_copy.sh
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: examples.md  index.html  install.sh
release-assets/: portfolio-arcade  portfolio-arcade-v0.1.4-x86_64-unknown-linux-gnu.tar.gz.sha256  portfolio-arcade-v0.1.5-x86_64-unknown-linux-gnu.tar.gz.sha256  portfolio-arcade-v0.1.6-x86_64-unknown-linux-gnu.tar.gz.sha256  portfolio-arcade-v0.1.7-x86_64-unknown-linux-gnu.tar.gz.sha256
scripts/: build-release.sh  install.sh
src/: cli.rs  lib.rs  main.rs  update.rs
src/generator/: dependencies.rs  mod.rs  template.rs
src/github/: client.rs  mod.rs
src/models/: mod.rs  portfolio.rs  theme.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/utils/: errors.rs  fs.rs  mod.rs  validation.rs
templates/ps3-template/: .gitignore  README.md  package-lock.json  package.json
templates/ps3-template/app/: globals.css  layout.tsx  page.tsx
templates/ps3-template/hooks/: use-sound-effects.ts
templates/ps3-template/lib/: load-portfolio-data.ts  xmb-data.ts
templates/ps5-template/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts
templates/ps5-template/app/: globals.css  layout.tsx  page.tsx
templates/ps5-template/lib/: load-portfolio-data.ts  (+2 more)
templates/wii-template/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
tests/: integration_tests.rs
(+35 files in other folders)
